tests/pos/test-stringdecl.dic
class func_test{
  func int main(){
    string a = "string";
    printstr(a);
    return 0;
  }
}
