tests/neg/test-for-1.dic
class ForTest {
    func int main() {
        for(int i = 0; int i = 0; i = i + 1) {
            printstr("should not print");
        }

        return 0;
    }
}